# counted-float

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: workflows.md
.github/actions/badges_and_splash/: action.yml
.github/actions/unit_test/: action.yml
.github/scripts/: update_readme_badge_urls.py  update_readme_urls.py
.github/workflows/: deploy_dev.yml  deploy_prod.yml  pre_release_checks.yml  tag_release.yml  unit_tests.yml  unit_tests_full.yml  unit_tests_reduced.yml  update_badges.yml
counted_float/: __init__.py
counted_float/_core/benchmarking/: _flops_benchmark_suite.py  _micro_benchmark.py
counted_float/_core/counting/config/: __init__.py  _config.py
counted_float/_core/counting/models/: _base.py  _flop_counts.py  _flop_type.py  _flop_weights.py  _fpu_instruction.py
counted_float/benchmarking/: __init__.py
tests/benchmarking/: test_flops_benchmark_suite.py  test_flops_micro_benchmark.py  test_micro_benchmark.py  test_time_utils.py
tests/counting/: conftest.py  test_built_in_data.py  test_context_managers.py  test_counted_float.py  test_global_counter.py
tests/counting/config/: test_config.py  test_defaults.py
tests/counting/models/: test_flop_counts.py  test_flop_type.py  test_flop_weights.py  test_flops_benchmark_results.py
tests/shared/: test_compatibility.py  test_imports.py  test_optional_deps.py
